k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notesapp
  labels:
    app: notesapp
spec:
  selector:
    app: notesapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
