k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: notesapp.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notesapp
            port:
              number: 80
